# nwtzlangvm

./: Cargo.toml  README.md  code.nwtz  code.nwtzc  notes  out.nwtzc
src/: bytecode.rs  compiler.rs  lib.rs  main.rs  serialization.rs  vm.rs
